# chat

./: .gitignore
back/: pyproject.toml
back/mychat/: db.sqlite3
back/mychat/chat/: admin.py  consumers.py  models.py  views.py
back/mychat/chat/api/: serializers.py
back/mychat/chat/migrations/: 0001_initial.py  0002_remove_message_author_contact_chat_message_contact.py
back/mychat/chat/templates/chat/: chat.html  room.html
back/mychat/mychat/: asgi.py  settings.py  urls.py
back/mychat/post/: models.py  serializers.py  urls.py  views.py
back/mychat/post/migrations/: 0001_initial.py
front/web/: package-lock.json  package.json
front/web/public/: index.html
